--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 server.port = 8080
+spring.data.mongodb.uri=mongodb://localhost:27017/test?connect=replicaSet&replicaSet=rs0
+spring.data.mongodb.auto-index-creation=true
